[package]
name = "hexavalent"
version = "0.1.5"
authors = ["notdijon <61089563+notdijon@users.noreply.github.com>"]
license = "MIT"
description = "Write HexChat plugins in Rust."
repository = "https://github.com/notdijon/hexavalent"
documentation = "https://docs.rs/hexavalent"
readme = "./README.md"
categories = ["api-bindings"]
keywords = ["hexchat", "irc"]
edition = "2018"

[dependencies]
bitflags = { version = "1.2.1", default-features = false }
libc = { version = "0.2.67", default-features = false }
time = { version = "0.2.23", default-features = false }

[features]
default = []
__unstable_ircv3_line_in_event_attrs = []

[profile.release]
lto = true
codegen-units = 1
debug = 1

[[example]]
name = "simple"
crate-type = ["cdylib"]
