[package]
name = "hexavalent"
version = "0.2.1"
authors = ["notdijon <61089563+notdijon@users.noreply.github.com>"]
license = "MIT"
description = "Write HexChat plugins in Rust."
repository = "https://github.com/notdijon/hexavalent"
documentation = "https://docs.rs/hexavalent"
readme = "./README.md"
categories = ["api-bindings"]
keywords = ["hexchat", "irc"]
edition = "2021"

[dependencies]
bitflags = { version = "1.3.2", default-features = false }
libc = { version = "0.2.67", default-features = false }
time = { version = "0.3.7", default-features = false }

[features]
default = []
__unstable_ircv3_line_in_event_attrs = []

[profile.release]
lto = true
codegen-units = 1
debug = 1

[[example]]
name = "simple"
crate-type = ["cdylib"]

[[example]]
name = "time_shift"
crate-type = ["cdylib"]
